[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "webscraping-with-python"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
pandas = "^1.0"
python = "^3.8"
replit = "^1.1"
[tool.poetry.dev-dependencies]
